--- a/index.html
+++ b/index.html
@@ -161,42 +161,65 @@
             );
         }
 
-        /* Opalescent Profile Ring */
+        /* Liquid Glass Profile Ring */
         .profile-ring {
             position: relative;
-            padding: 4px;
+            padding: 3px;
             border-radius: 9999px;
             background: linear-gradient(
-                135deg,
-                rgba(124, 58, 237, 0.6),
-                rgba(34, 211, 238, 0.5),
-                rgba(236, 72, 153, 0.5),
-                rgba(124, 58, 237, 0.4)
+                145deg,
+                rgba(255, 255, 255, 0.5),
+                rgba(200, 220, 255, 0.3),
+                rgba(255, 255, 255, 0.4),
+                rgba(220, 240, 255, 0.25)
             );
             box-shadow:
-                0 0 30px rgba(124, 58, 237, 0.3),
-                0 0 60px rgba(34, 211, 238, 0.2);
+                0 4px 24px rgba(0, 0, 0, 0.15),
+                0 1px 3px rgba(255, 255, 255, 0.2),
+                inset 0 1px 1px rgba(255, 255, 255, 0.4);
         }
 
         .profile-ring::before {
             content: '';
             position: absolute;
-            inset: -2px;
+            inset: 0;
             border-radius: 9999px;
+            padding: 3px;
             background: linear-gradient(
-                45deg,
-                rgba(255, 255, 255, 0.3),
-                transparent,
-                rgba(255, 255, 255, 0.2),
-                transparent,
-                rgba(255, 255, 255, 0.3)
+                135deg,
+                rgba(255, 255, 255, 0.6) 0%,
+                rgba(255, 255, 255, 0.1) 25%,
+                rgba(200, 230, 255, 0.2) 50%,
+                rgba(255, 255, 255, 0.1) 75%,
+                rgba(255, 255, 255, 0.5) 100%
             );
-            animation: shimmer 3s ease-in-out infinite;
+            -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+            mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+            -webkit-mask-composite: xor;
+            mask-composite: exclude;
+            animation: liquidShine 4s ease-in-out infinite;
         }
 
-        @keyframes shimmer {
-            0%, 100% { opacity: 0.5; transform: rotate(0deg); }
-            50% { opacity: 1; transform: rotate(180deg); }
+        .profile-ring::after {
+            content: '';
+            position: absolute;
+            top: 6px;
+            left: 15%;
+            right: 15%;
+            height: 35%;
+            border-radius: 9999px;
+            background: linear-gradient(
+                180deg,
+                rgba(255, 255, 255, 0.35) 0%,
+                rgba(255, 255, 255, 0.05) 100%
+            );
+            filter: blur(1px);
+            pointer-events: none;
+        }
+
+        @keyframes liquidShine {
+            0%, 100% { opacity: 0.7; }
+            50% { opacity: 1; }
         }
 
         /* Contact Links with Opalescent Effect */
@@ -310,6 +333,7 @@
                         src="/profile.jpg"
                         alt="Brandon Noskoviak"
                         class="w-28 h-28 md:w-36 md:h-36 rounded-full object-cover"
+                        style="box-shadow: inset 0 0 20px rgba(255,255,255,0.1);"
                     />
                 </div>
 
