--- a/index.html
+++ b/index.html
@@ -41,50 +41,52 @@
             font-style: normal;
         }
 
-        /* Light Background with subtle texture */
+        /* Light Background with subtle gradient */
         body {
-            background: #fafafa;
+            background: #f5f5f7;
             background-image:
-                radial-gradient(at 100% 0%, rgba(99, 102, 241, 0.04) 0px, transparent 50%),
-                radial-gradient(at 0% 100%, rgba(14, 165, 233, 0.03) 0px, transparent 50%);
+                radial-gradient(at 0% 0%, rgba(99, 102, 241, 0.08) 0px, transparent 50%),
+                radial-gradient(at 100% 0%, rgba(14, 165, 233, 0.06) 0px, transparent 50%),
+                radial-gradient(at 100% 100%, rgba(168, 85, 247, 0.05) 0px, transparent 50%),
+                radial-gradient(at 0% 100%, rgba(34, 211, 238, 0.04) 0px, transparent 50%);
             min-height: 100vh;
         }
 
-        /* Sharp Glass Card - Light Mode */
+        /* Glass Card - Light Mode */
         .glass-card {
-            background: rgba(255, 255, 255, 0.7);
-            backdrop-filter: blur(8px) saturate(120%);
-            -webkit-backdrop-filter: blur(8px) saturate(120%);
-            border: 1px solid rgba(0, 0, 0, 0.06);
+            background: rgba(255, 255, 255, 0.4);
+            backdrop-filter: blur(20px) saturate(120%);
+            -webkit-backdrop-filter: blur(20px) saturate(120%);
+            border: 1px solid rgba(255, 255, 255, 0.5);
             box-shadow:
                 0 1px 2px rgba(0, 0, 0, 0.04),
-                0 4px 16px rgba(0, 0, 0, 0.04);
+                0 4px 16px rgba(0, 0, 0, 0.03);
             position: relative;
             transition: all 0.2s ease;
         }
 
         .glass-card:hover {
-            background: rgba(255, 255, 255, 0.85);
+            background: rgba(255, 255, 255, 0.55);
             box-shadow:
                 0 1px 2px rgba(0, 0, 0, 0.04),
-                0 8px 32px rgba(0, 0, 0, 0.06);
+                0 8px 32px rgba(0, 0, 0, 0.05);
             transform: translateY(-1px);
         }
 
-        /* Sharp Glass Pills */
+        /* Glass Pills */
         .glass-pill {
-            background: rgba(255, 255, 255, 0.6);
-            backdrop-filter: blur(6px);
-            -webkit-backdrop-filter: blur(6px);
-            border: 1px solid rgba(0, 0, 0, 0.08);
+            background: rgba(255, 255, 255, 0.35);
+            backdrop-filter: blur(16px);
+            -webkit-backdrop-filter: blur(16px);
+            border: 1px solid rgba(255, 255, 255, 0.4);
             transition: all 0.2s ease;
         }
 
         .glass-pill:hover {
-            background: rgba(255, 255, 255, 0.9);
-            border-color: rgba(0, 0, 0, 0.12);
+            background: rgba(255, 255, 255, 0.55);
+            border-color: rgba(255, 255, 255, 0.6);
             transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.06);
         }
 
         /* Liquid Glass Profile Ring - Light Mode */
@@ -124,18 +126,18 @@
 
         /* Contact Links - Light Mode */
         .contact-link {
-            background: rgba(255, 255, 255, 0.6);
-            backdrop-filter: blur(6px);
-            -webkit-backdrop-filter: blur(6px);
-            border: 1px solid rgba(0, 0, 0, 0.08);
+            background: rgba(255, 255, 255, 0.35);
+            backdrop-filter: blur(16px);
+            -webkit-backdrop-filter: blur(16px);
+            border: 1px solid rgba(255, 255, 255, 0.4);
             transition: all 0.2s ease;
         }
 
         .contact-link:hover {
-            background: rgba(255, 255, 255, 0.95);
-            border-color: rgba(0, 0, 0, 0.12);
+            background: rgba(255, 255, 255, 0.55);
+            border-color: rgba(255, 255, 255, 0.6);
             transform: translateY(-2px);
-            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
+            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.06);
         }
 
         /* Charter Typography - Make it Pop */
@@ -215,7 +217,7 @@
         </header>
 
         <!-- About Section -->
-        <section class="glass-card rounded-2xl p-8 md:p-10 mb-6 animate-fade-in animate-delay-1">
+        <section class="glass-card rounded-lg p-8 md:p-10 mb-6 animate-fade-in animate-delay-1">
             <h2 class="heading-charter text-2xl mb-6">
                 About
             </h2>
@@ -232,7 +234,7 @@
         </section>
 
         <!-- Experience Section -->
-        <section class="glass-card rounded-2xl p-8 md:p-10 mb-6 animate-fade-in animate-delay-2">
+        <section class="glass-card rounded-lg p-8 md:p-10 mb-6 animate-fade-in animate-delay-2">
             <h2 class="heading-charter text-2xl mb-8">
                 Experience
             </h2>
@@ -293,7 +295,7 @@
         </section>
 
         <!-- Expertise Section -->
-        <section class="glass-card rounded-2xl p-8 md:p-10 mb-6 animate-fade-in animate-delay-3">
+        <section class="glass-card rounded-lg p-8 md:p-10 mb-6 animate-fade-in animate-delay-3">
             <h2 class="heading-charter text-2xl mb-4">
                 Expertise
             </h2>
@@ -330,7 +332,7 @@
         </section>
 
         <!-- Contact Section -->
-        <section class="glass-card rounded-2xl p-8 md:p-10 mb-10 animate-fade-in animate-delay-4">
+        <section class="glass-card rounded-lg p-8 md:p-10 mb-10 animate-fade-in animate-delay-4">
             <h2 class="heading-charter text-2xl mb-4">
                 Get in Touch
             </h2>
@@ -340,7 +342,7 @@
 
             <div class="flex flex-wrap gap-4">
                 <a href="mailto:noskoviak@gmail.com"
-                   class="contact-link inline-flex items-center gap-3 px-6 py-3 rounded-xl text-gray-700 font-medium">
+                   class="contact-link inline-flex items-center gap-3 px-6 py-3 rounded-md text-gray-700 font-medium">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <rect width="20" height="16" x="2" y="4" rx="2"/>
                         <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/>
@@ -350,7 +352,7 @@
                 <a href="https://linkedin.com/in/bnoskoviak"
                    target="_blank"
                    rel="noopener noreferrer"
-                   class="contact-link inline-flex items-center gap-3 px-6 py-3 rounded-xl text-gray-700 font-medium">
+                   class="contact-link inline-flex items-center gap-3 px-6 py-3 rounded-md text-gray-700 font-medium">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/>
                         <rect width="4" height="12" x="2" y="9"/>
@@ -361,7 +363,7 @@
                 <a href="https://github.com/prolitariat"
                    target="_blank"
                    rel="noopener noreferrer"
-                   class="contact-link inline-flex items-center gap-3 px-6 py-3 rounded-xl text-gray-700 font-medium">
+                   class="contact-link inline-flex items-center gap-3 px-6 py-3 rounded-md text-gray-700 font-medium">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/>
                         <path d="M9 18c-4.51 2-5-2-7-2"/>
