Make profile photo rounded rectangle to match cards

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         .profile-ring {
             position: relative;
             padding: 3px;
-            border-radius: 9999px;
+            border-radius: 0.5rem;
             background: linear-gradient(
                 145deg,
                 rgba(255, 255, 255, 0.9),
@@ -110,7 +110,7 @@
             content: '';
             position: absolute;
             inset: 0;
-            border-radius: 9999px;
+            border-radius: 0.5rem;
             padding: 3px;
             background: linear-gradient(
                 135deg,
@@ -194,7 +194,7 @@
                     <img
                         src="/profile.jpg"
                         alt="Brandon Noskoviak"
-                        class="w-28 h-28 md:w-36 md:h-36 rounded-full object-cover"
+                        class="w-28 h-28 md:w-36 md:h-36 rounded object-cover"
                     />
                 </div>
 
