--- a/index.html
+++ b/index.html
@@ -41,29 +41,49 @@
             font-style: normal;
         }
 
-        /* Cloudy Sky + Opalescent Background */
+        /* Cloudy Sky + Opalescent Background with Depth */
         body {
-            background: linear-gradient(135deg, #e0e7ff 0%, #dbeafe 25%, #f0e7ff 50%, #e0f2fe 75%, #ede9fe 100%);
+            background: linear-gradient(160deg, #e8eeff 0%, #dbeafe 20%, #f0e7ff 45%, #e0f2fe 70%, #ede9fe 100%);
             background-attachment: fixed;
             min-height: 100vh;
             position: relative;
         }
 
+        /* Deep background layer - larger, softer blobs */
         body::before {
+            content: '';
+            position: fixed;
+            inset: -30%;
+            width: 160%;
+            height: 160%;
+            background-image:
+                radial-gradient(ellipse 100% 70% at 10% 10%, rgba(165, 180, 252, 0.4) 0%, transparent 50%),
+                radial-gradient(ellipse 80% 60% at 90% 20%, rgba(147, 197, 253, 0.35) 0%, transparent 50%),
+                radial-gradient(ellipse 90% 70% at 30% 80%, rgba(196, 181, 253, 0.35) 0%, transparent 50%),
+                radial-gradient(ellipse 70% 50% at 80% 90%, rgba(165, 243, 252, 0.25) 0%, transparent 50%);
+            pointer-events: none;
+            z-index: 0;
+            animation: cloudDriftSlow 30s ease-in-out infinite;
+            filter: blur(40px);
+        }
+
+        /* Mid layer - medium clouds */
+        body::after {
             content: '';
             position: fixed;
             inset: -20%;
             width: 140%;
             height: 140%;
             background-image:
-                radial-gradient(ellipse 80% 50% at 20% 20%, rgba(165, 180, 252, 0.5) 0%, transparent 50%),
-                radial-gradient(ellipse 60% 40% at 80% 30%, rgba(147, 197, 253, 0.4) 0%, transparent 50%),
-                radial-gradient(ellipse 70% 50% at 40% 70%, rgba(196, 181, 253, 0.4) 0%, transparent 50%),
-                radial-gradient(ellipse 50% 30% at 70% 80%, rgba(165, 243, 252, 0.3) 0%, transparent 50%),
-                radial-gradient(ellipse 90% 60% at 10% 90%, rgba(251, 207, 232, 0.3) 0%, transparent 50%);
+                radial-gradient(ellipse 60% 40% at 25% 30%, rgba(255, 200, 220, 0.3) 0%, transparent 50%),
+                radial-gradient(ellipse 50% 35% at 75% 25%, rgba(200, 220, 255, 0.35) 0%, transparent 50%),
+                radial-gradient(ellipse 55% 40% at 50% 70%, rgba(220, 200, 255, 0.3) 0%, transparent 50%),
+                radial-gradient(ellipse 45% 30% at 85% 75%, rgba(180, 240, 255, 0.25) 0%, transparent 50%),
+                radial-gradient(ellipse 50% 35% at 15% 85%, rgba(255, 210, 230, 0.25) 0%, transparent 50%);
             pointer-events: none;
             z-index: 0;
             animation: cloudDrift 20s ease-in-out infinite;
+            filter: blur(20px);
         }
 
         @keyframes cloudDrift {
@@ -73,37 +93,84 @@
             75% { transform: translate(1%, -1%) scale(1.01); }
         }
 
+        @keyframes cloudDriftSlow {
+            0%, 100% { transform: translate(0, 0) scale(1); }
+            33% { transform: translate(-1.5%, 1%) scale(1.01); }
+            66% { transform: translate(1%, -0.5%) scale(1); }
+        }
+
         main {
             position: relative;
             z-index: 1;
         }
 
-        /* Glass Card - Light Mode */
+        /* Glass Card - Light Mode with Enhanced Depth */
         .glass-card {
-            background: rgba(255, 255, 255, 0.45);
-            backdrop-filter: blur(24px) saturate(140%);
-            -webkit-backdrop-filter: blur(24px) saturate(140%);
+            background: linear-gradient(
+                145deg,
+                rgba(255, 255, 255, 0.5) 0%,
+                rgba(255, 255, 255, 0.35) 50%,
+                rgba(255, 255, 255, 0.45) 100%
+            );
+            backdrop-filter: blur(24px) saturate(150%);
+            -webkit-backdrop-filter: blur(24px) saturate(150%);
             border: 1px solid rgba(255, 255, 255, 0.6);
             box-shadow:
-                0 1px 2px rgba(0, 0, 0, 0.03),
-                0 8px 32px rgba(0, 0, 0, 0.04),
-                inset 0 1px 0 rgba(255, 255, 255, 0.5);
+                0 1px 1px rgba(255, 255, 255, 0.8),
+                0 2px 4px rgba(0, 0, 0, 0.02),
+                0 4px 8px rgba(0, 0, 0, 0.02),
+                0 8px 16px rgba(0, 0, 0, 0.03),
+                0 16px 32px rgba(0, 0, 0, 0.04),
+                inset 0 1px 0 rgba(255, 255, 255, 0.6),
+                inset 0 -1px 0 rgba(0, 0, 0, 0.02);
             position: relative;
             transition: all 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
         }
 
+        /* Top highlight reflection */
+        .glass-card::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 40%;
+            background: linear-gradient(
+                180deg,
+                rgba(255, 255, 255, 0.15) 0%,
+                transparent 100%
+            );
+            border-radius: inherit;
+            pointer-events: none;
+        }
+
         .glass-card:hover {
-            background: rgba(255, 255, 255, 0.6);
+            background: linear-gradient(
+                145deg,
+                rgba(255, 255, 255, 0.6) 0%,
+                rgba(255, 255, 255, 0.45) 50%,
+                rgba(255, 255, 255, 0.55) 100%
+            );
             box-shadow:
-                0 1px 2px rgba(0, 0, 0, 0.03),
-                0 12px 40px rgba(0, 0, 0, 0.06),
-                inset 0 1px 0 rgba(255, 255, 255, 0.6);
-            transform: translateY(-3px);
+                0 1px 1px rgba(255, 255, 255, 0.9),
+                0 2px 4px rgba(0, 0, 0, 0.02),
+                0 4px 8px rgba(0, 0, 0, 0.03),
+                0 8px 16px rgba(0, 0, 0, 0.04),
+                0 20px 40px rgba(0, 0, 0, 0.06),
+                0 32px 64px rgba(0, 0, 0, 0.04),
+                inset 0 1px 0 rgba(255, 255, 255, 0.7),
+                inset 0 -1px 0 rgba(0, 0, 0, 0.02);
+            transform: translateY(-4px);
         }
 
         .glass-card:active {
             transform: scale(0.985) translateY(0);
             transition: all 0.1s ease;
+        }
+
+        .glass-card > * {
+            position: relative;
+            z-index: 1;
         }
 
         /* Scroll-triggered jiggle */
@@ -127,13 +194,53 @@
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.03);
             transition: all 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
             cursor: default;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .glass-pill::before {
+            content: '';
+            position: absolute;
+            inset: 0;
+            padding: 1px;
+            border-radius: inherit;
+            background: linear-gradient(
+                90deg,
+                rgba(255, 255, 255, 0.3),
+                rgba(255, 200, 200, 0.4),
+                rgba(255, 230, 150, 0.4),
+                rgba(200, 255, 200, 0.4),
+                rgba(150, 220, 255, 0.4),
+                rgba(200, 180, 255, 0.4),
+                rgba(255, 180, 220, 0.4),
+                rgba(255, 255, 255, 0.3)
+            );
+            background-size: 300% 100%;
+            -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+            mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+            -webkit-mask-composite: xor;
+            mask-composite: exclude;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        .glass-pill:hover::before {
+            opacity: 1;
+            animation: shimmerBorder 2s linear infinite;
+        }
+
+        @keyframes shimmerBorder {
+            0% { background-position: 0% 50%; }
+            100% { background-position: 300% 50%; }
         }
 
         .glass-pill:hover {
             background: rgba(255, 255, 255, 0.65);
-            border-color: rgba(255, 255, 255, 0.7);
             transform: translateY(-4px) scale(1.02);
-            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
+            box-shadow:
+                0 8px 24px rgba(0, 0, 0, 0.08),
+                0 0 20px rgba(200, 180, 255, 0.15),
+                0 0 40px rgba(150, 220, 255, 0.1);
         }
 
         .glass-pill:active {
@@ -146,40 +253,65 @@
             position: relative;
             padding: 4px;
             border-radius: 0.5rem;
-            background: rgba(255, 255, 255, 0.5);
+            background: linear-gradient(
+                145deg,
+                rgba(255, 255, 255, 0.6) 0%,
+                rgba(255, 255, 255, 0.4) 100%
+            );
             backdrop-filter: blur(20px);
             -webkit-backdrop-filter: blur(20px);
             box-shadow:
-                0 4px 16px rgba(0, 0, 0, 0.06),
-                0 8px 32px rgba(0, 0, 0, 0.04),
-                inset 0 1px 0 rgba(255, 255, 255, 0.6);
+                0 1px 1px rgba(255, 255, 255, 0.8),
+                0 4px 8px rgba(0, 0, 0, 0.04),
+                0 8px 16px rgba(0, 0, 0, 0.04),
+                0 16px 32px rgba(0, 0, 0, 0.05),
+                inset 0 1px 0 rgba(255, 255, 255, 0.7);
             border: 1px solid rgba(255, 255, 255, 0.6);
             transition: transform 0.3s cubic-bezier(0.34, 1.56, 0.64, 1), box-shadow 0.3s ease;
         }
 
         .profile-ring:hover {
-            transform: scale(1.03) translateY(-2px);
+            transform: scale(1.03) translateY(-3px);
             box-shadow:
-                0 8px 24px rgba(0, 0, 0, 0.08),
-                0 16px 48px rgba(0, 0, 0, 0.06),
-                inset 0 1px 0 rgba(255, 255, 255, 0.7);
+                0 1px 1px rgba(255, 255, 255, 0.9),
+                0 8px 16px rgba(0, 0, 0, 0.06),
+                0 16px 32px rgba(0, 0, 0, 0.06),
+                0 24px 48px rgba(0, 0, 0, 0.05),
+                inset 0 1px 0 rgba(255, 255, 255, 0.8);
         }
 
         /* Contact Links - Light Mode */
         .contact-link {
-            background: rgba(255, 255, 255, 0.4);
+            background: linear-gradient(
+                145deg,
+                rgba(255, 255, 255, 0.5) 0%,
+                rgba(255, 255, 255, 0.35) 100%
+            );
             backdrop-filter: blur(16px);
             -webkit-backdrop-filter: blur(16px);
             border: 1px solid rgba(255, 255, 255, 0.5);
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.03);
+            box-shadow:
+                0 1px 1px rgba(255, 255, 255, 0.6),
+                0 2px 4px rgba(0, 0, 0, 0.02),
+                0 4px 8px rgba(0, 0, 0, 0.03),
+                inset 0 1px 0 rgba(255, 255, 255, 0.5);
             transition: all 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
         }
 
         .contact-link:hover {
-            background: rgba(255, 255, 255, 0.65);
+            background: linear-gradient(
+                145deg,
+                rgba(255, 255, 255, 0.65) 0%,
+                rgba(255, 255, 255, 0.5) 100%
+            );
             border-color: rgba(255, 255, 255, 0.7);
             transform: translateY(-4px) scale(1.02);
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
+            box-shadow:
+                0 1px 1px rgba(255, 255, 255, 0.8),
+                0 4px 8px rgba(0, 0, 0, 0.03),
+                0 8px 16px rgba(0, 0, 0, 0.04),
+                0 16px 32px rgba(0, 0, 0, 0.05),
+                inset 0 1px 0 rgba(255, 255, 255, 0.6);
         }
 
         .contact-link:active {
